libs/kasx_lib_old/grammar/.antlr/KasXParser.java
// Generated from /home/lazzy07/projects/kastane_x/compiler/libs/kasx_lib/grammar/KasX.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KasXParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, WS=3, TYPE_DEFINITION_KEYWORD=4, ENTITY_DEFINITION_KEYWORD=5, 
		FLUENT_DEFINITION_KEYWORD=6, ACTION_DEFINITION_KEYWORD=7, TRIGGER_DEFINITION_KEYWORD=8, 
		KEYWORD_BELIEVES=9, UTILITY_DEFINITION_KEYWORD=10, EXISTENTIAL_QUANTIFICATION_KEYWORD=11, 
		CONDITIONAL_EFFECT_KEYWORD=12, UNIVERSAL_QUANTIFICATION_KEYWORD=13, PRODUCT_KEYWORD=14, 
		SUM_KEYWORD=15, GOAL_KEYWORD=16, NUMBER_KEYWORD=17, BOOLEAN_KEYWORD=18, 
		PRECONDITION_KEYWORD=19, EFFECT_KEYWORD=20, CONSENTING_KEYWORD=21, OBSERVING_KEYWORD=22, 
		CONDITIONAL_FIRST_BRANCH_KEYWORD=23, CONDITIONAL_LAST_BRANCH_KEYWORD=24, 
		CONDITIONAL_MIDDLE_BRANCH_KEYWORD=25, NUMBER=26, IDENTIFIER=27, UNKNOWN_KEYWORD=28, 
		FALSE_KEYWORD=29, TRUE_KEYWORD=30, NULL_CLAUSE_KEYWORD=31, EQUAL_TO_KEYWORD=32, 
		NOT_EQUAL_TO_KEYWORD=33, GREATER_THAN_OR_EQUAL_TO_KEYWORD=34, LESS_THAN_OR_EQUAL_TO_KEYWORD=35, 
		ASSIGNMENT_KEYWORD=36, NEGATION_KEYWORD=37, DISJUNCTION_KEYWORD=38, CONJUNCTION_KEYWORD=39, 
		GREATER_THAN_KEYWORD=40, LESS_THAN_KEYWORD=41, MULTIPLICATION_KEYWORD=42, 
		DIVISION_KEYWORD=43, ADDITION_KEYWORD=44, SUBTRACTION_KEYWORD=45, OPEN_BRACKET=46, 
		CLOSE_BRACKET=47, START_CUR_BRACES=48, END_CUR_BRACES=49, DEFINITION_SEPARATOR=50, 
		COLON=51, COMMA=52, ERROR_CHAR=53;
	public static final int
		RULE_prog = 0, RULE_definition = 1, RULE_type_declaration = 2, RULE_type_name = 3, 
		RULE_types_list = 4, RULE_entity_declaration = 5, RULE_fluent_declaration = 6, 
		RULE_param_list = 7, RULE_param = 8, RULE_action_definition = 9, RULE_function_header = 10, 
		RULE_action_body = 11, RULE_precondition_block = 12, RULE_effect_block = 13, 
		RULE_consenting_list = 14, RULE_observing_fun = 15, RULE_initial_state_declaration = 16, 
		RULE_trigger_definition = 17, RULE_trigger_body = 18, RULE_utility_definition = 19, 
		RULE_identifiers_list = 20, RULE_conditions_list = 21, RULE_belives_expression = 22, 
		RULE_exists_clause = 23, RULE_arithmetic_expression = 24, RULE_inheritance_expression = 25, 
		RULE_forall_function = 26, RULE_sum_function = 27, RULE_unary_not_expression = 28, 
		RULE_negation_expression = 29, RULE_fluent = 30, RULE_argument_list = 31, 
		RULE_if_else_block = 32, RULE_binary_op = 33, RULE_boolean_data = 34, 
		RULE_data_type = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "definition", "type_declaration", "type_name", "types_list", 
			"entity_declaration", "fluent_declaration", "param_list", "param", "action_definition", 
			"function_header", "action_body", "precondition_block", "effect_block", 
			"consenting_list", "observing_fun", "initial_state_declaration", "trigger_definition", 
			"trigger_body", "utility_definition", "identifiers_list", "conditions_list", 
			"belives_expression", "exists_clause", "arithmetic_expression", "inheritance_expression", 
			"forall_function", "sum_function", "unary_not_expression", "negation_expression", 
			"fluent", "argument_list", "if_else_block", "binary_op", "boolean_data", 
			"data_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'type'", "'entity'", "'property'", "'action'", 
			"'trigger'", "'believes'", "'utility'", "'exists'", "'when'", "'forall'", 
			"'product'", "'sum'", "'goal'", "'number'", "'boolean'", "'precondition'", 
			"'effect'", "'consenting'", "'observing'", "'if'", "'else'", "'elseif'", 
			null, null, "'?'", "'False'", "'True'", "'nil'", "'=='", "'!='", "'>='", 
			"'<='", "'='", "'!'", "'|'", "'&'", "'>'", "'<'", "'*'", "'/'", "'+'", 
			"'-'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "WS", "TYPE_DEFINITION_KEYWORD", 
			"ENTITY_DEFINITION_KEYWORD", "FLUENT_DEFINITION_KEYWORD", "ACTION_DEFINITION_KEYWORD", 
			"TRIGGER_DEFINITION_KEYWORD", "KEYWORD_BELIEVES", "UTILITY_DEFINITION_KEYWORD", 
			"EXISTENTIAL_QUANTIFICATION_KEYWORD", "CONDITIONAL_EFFECT_KEYWORD", "UNIVERSAL_QUANTIFICATION_KEYWORD", 
			"PRODUCT_KEYWORD", "SUM_KEYWORD", "GOAL_KEYWORD", "NUMBER_KEYWORD", "BOOLEAN_KEYWORD", 
			"PRECONDITION_KEYWORD", "EFFECT_KEYWORD", "CONSENTING_KEYWORD", "OBSERVING_KEYWORD", 
			"CONDITIONAL_FIRST_BRANCH_KEYWORD", "CONDITIONAL_LAST_BRANCH_KEYWORD", 
			"CONDITIONAL_MIDDLE_BRANCH_KEYWORD", "NUMBER", "IDENTIFIER", "UNKNOWN_KEYWORD", 
			"FALSE_KEYWORD", "TRUE_KEYWORD", "NULL_CLAUSE_KEYWORD", "EQUAL_TO_KEYWORD", 
			"NOT_EQUAL_TO_KEYWORD", "GREATER_THAN_OR_EQUAL_TO_KEYWORD", "LESS_THAN_OR_EQUAL_TO_KEYWORD", 
			"ASSIGNMENT_KEYWORD", "NEGATION_KEYWORD", "DISJUNCTION_KEYWORD", "CONJUNCTION_KEYWORD", 
			"GREATER_THAN_KEYWORD", "LESS_THAN_KEYWORD", "MULTIPLICATION_KEYWORD", 
			"DIVISION_KEYWORD", "ADDITION_KEYWORD", "SUBTRACTION_KEYWORD", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "START_CUR_BRACES", "END_CUR_BRACES", "DEFINITION_SEPARATOR", 
			"COLON", "COMMA", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KasX.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KasXParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ProgContext {
		public TerminalNode EOF() { return getToken(KasXParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitProgram(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 105694791512048L) != 0)) {
				{
				{
				setState(72);
				definition();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Type_declarationContext type_declaration() {
			return getRuleContext(Type_declarationContext.class,0);
		}
		public Entity_declarationContext entity_declaration() {
			return getRuleContext(Entity_declarationContext.class,0);
		}
		public Fluent_declarationContext fluent_declaration() {
			return getRuleContext(Fluent_declarationContext.class,0);
		}
		public Initial_state_declarationContext initial_state_declaration() {
			return getRuleContext(Initial_state_declarationContext.class,0);
		}
		public Action_definitionContext action_definition() {
			return getRuleContext(Action_definitionContext.class,0);
		}
		public Trigger_definitionContext trigger_definition() {
			return getRuleContext(Trigger_definitionContext.class,0);
		}
		public Utility_definitionContext utility_definition() {
			return getRuleContext(Utility_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				type_declaration();
				}
				break;
			case ENTITY_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				entity_declaration();
				}
				break;
			case FLUENT_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				fluent_declaration();
				}
				break;
			case KEYWORD_BELIEVES:
			case EXISTENTIAL_QUANTIFICATION_KEYWORD:
			case UNIVERSAL_QUANTIFICATION_KEYWORD:
			case SUM_KEYWORD:
			case CONDITIONAL_FIRST_BRANCH_KEYWORD:
			case NUMBER:
			case IDENTIFIER:
			case UNKNOWN_KEYWORD:
			case FALSE_KEYWORD:
			case TRUE_KEYWORD:
			case NULL_CLAUSE_KEYWORD:
			case NEGATION_KEYWORD:
			case SUBTRACTION_KEYWORD:
			case OPEN_BRACKET:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				initial_state_declaration();
				}
				break;
			case ACTION_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				action_definition();
				}
				break;
			case TRIGGER_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				trigger_definition();
				}
				break;
			case UTILITY_DEFINITION_KEYWORD:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				utility_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_declarationContext extends ParserRuleContext {
		public Type_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_declaration; }
	 
		public Type_declarationContext() { }
		public void copyFrom(Type_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationNoParentsContext extends Type_declarationContext {
		public TerminalNode TYPE_DEFINITION_KEYWORD() { return getToken(KasXParser.TYPE_DEFINITION_KEYWORD, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KasXParser.IDENTIFIER, 0); }
		public TerminalNode DEFINITION_SEPARATOR() { return getToken(KasXParser.DEFINITION_SEPARATOR, 0); }
		public TypeDeclarationNoParentsContext(Type_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterTypeDeclarationNoParents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitTypeDeclarationNoParents(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationWithParentsContext extends Type_declarationContext {
		public TerminalNode TYPE_DEFINITION_KEYWORD() { return getToken(KasXParser.TYPE_DEFINITION_KEYWORD, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KasXParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(KasXParser.COLON, 0); }
		public Types_listContext types_list() {
			return getRuleContext(Types_listContext.class,0);
		}
		public TerminalNode DEFINITION_SEPARATOR() { return getToken(KasXParser.DEFINITION_SEPARATOR, 0); }
		public TypeDeclarationWithParentsContext(Type_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterTypeDeclarationWithParents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitTypeDeclarationWithParents(this);
		}
	}

	public final Type_declarationContext type_declaration() throws RecognitionException {
		Type_declarationContext _localctx = new Type_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_declaration);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new TypeDeclarationNoParentsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(TYPE_DEFINITION_KEYWORD);
				setState(90);
				match(IDENTIFIER);
				setState(91);
				match(DEFINITION_SEPARATOR);
				}
				break;
			case 2:
				_localctx = new TypeDeclarationWithParentsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(TYPE_DEFINITION_KEYWORD);
				setState(93);
				match(IDENTIFIER);
				setState(94);
				match(COLON);
				setState(95);
				types_list();
				setState(96);
				match(DEFINITION_SEPARATOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(KasXParser.IDENTIFIER, 0); }
		public TerminalNode ENTITY_DEFINITION_KEYWORD() { return getToken(KasXParser.ENTITY_DEFINITION_KEYWORD, 0); }
		public Type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterType_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitType_name(this);
		}
	}

	public final Type_nameContext type_name() throws RecognitionException {
		Type_nameContext _localctx = new Type_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==ENTITY_DEFINITION_KEYWORD || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Types_listContext extends ParserRuleContext {
		public Types_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types_list; }
	 
		public Types_listContext() { }
		public void copyFrom(Types_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypesListContext extends Types_listContext {
		public List<Type_nameContext> type_name() {
			return getRuleContexts(Type_nameContext.class);
		}
		public Type_nameContext type_name(int i) {
			return getRuleContext(Type_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KasXParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KasXParser.COMMA, i);
		}
		public TypesListContext(Types_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterTypesList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitTypesList(this);
		}
	}

	public final Types_listContext types_list() throws RecognitionException {
		Types_listContext _localctx = new Types_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_types_list);
		int _la;
		try {
			_localctx = new TypesListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENTITY_DEFINITION_KEYWORD || _la==IDENTIFIER) {
				{
				setState(102);
				type_name();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(103);
					match(COMMA);
					setState(104);
					type_name();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_declarationContext extends ParserRuleContext {
		public Entity_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_declaration; }
	 
		public Entity_declarationContext() { }
		public void copyFrom(Entity_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EntityDeclarationContext extends Entity_declarationContext {
		public TerminalNode ENTITY_DEFINITION_KEYWORD() { return getToken(KasXParser.ENTITY_DEFINITION_KEYWORD, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KasXParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(KasXParser.COLON, 0); }
		public Types_listContext types_list() {
			return getRuleContext(Types_listContext.class,0);
		}
		public TerminalNode DEFINITION_SEPARATOR() { return getToken(KasXParser.DEFINITION_SEPARATOR, 0); }
		public EntityDeclarationContext(Entity_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).enterEntityDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KasXListener ) ((KasXListener)listener).exitEntityDeclaration(this);
		}
	}
